# a-maze-ing

./: .gitignore  MANIFEST.in  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  pyproject.toml  tester.py
maze_drawer/: __init__.py  color_sets.py  draw_sets.py  drawer.py  open_screen.py
mazegen/: README.md  __init__.py  generator.py  maze_algorithms.py
parser/: config.txt  drawer.py  map_model.py  parser.py
