[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "2.1"
description = "Reusable maze generator module"
readme = "README_MAZEGEN.md"
requires-python = ">=3.10"
authors = [
    {name = "dansimoe"},
    {name = "manferre"}
]
dependencies = [
    "pydantic",
]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.setuptools.packages.find]
include = ["mazegen*"]